@@ -24,8 +24,8 @@
  * Information about TAO is available at:
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
-#ifndef CIAO__________TUTORIAL_CODE_SHAPES_RECEIVER_COMP_SHAPES_RECEIVER_COMP_EXEC_KIL1IM_H_
-#define CIAO__________TUTORIAL_CODE_SHAPES_RECEIVER_COMP_SHAPES_RECEIVER_COMP_EXEC_KIL1IM_H_
+#ifndef CIAO__________TUTORIAL_CODE_SHAPES_RECEIVER_COMP_SHAPES_RECEIVER_COMP_EXEC_GYBLIT_H_
+#define CIAO__________TUTORIAL_CODE_SHAPES_RECEIVER_COMP_SHAPES_RECEIVER_COMP_EXEC_GYBLIT_H_
 
 #include /**/ "ace/pre.h"
 
@@ -52,20 +52,16 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     // Operations and attributes from ::Shapes::ShapeType_conn::Listener
 
     virtual
-    void on_one_data (
-      const ::ShapeType & datum,
-      const ::CCM_DDS::ReadInfo & info);
+    void on_one_data (const ::ShapeType & datum,
+    const ::CCM_DDS::ReadInfo & info);
 
     virtual
-    void on_many_data (
-      const ::Shapes::ShapeTypeSeq & data,
-      const ::CCM_DDS::ReadInfoSeq & infos);
+    void on_many_data (const ::Shapes::ShapeTypeSeq & data,
+    const ::CCM_DDS::ReadInfoSeq & infos);
 
   private:
     ::Shapes::CCM_Receiver_comp_Context_var ciao_context_;
   };
-
-  
 
   class  info_out_status_exec_i
     : public virtual ::CCM_DDS::CCM_PortStatusListener,
@@ -79,20 +75,16 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     // Operations and attributes from ::CCM_DDS::PortStatusListener
 
     virtual
-    void on_requested_deadline_missed (
-      ::DDS::DataReader_ptr the_reader,
-      const ::DDS::RequestedDeadlineMissedStatus & status);
+    void on_requested_deadline_missed (::DDS::DataReader_ptr the_reader,
+    const ::DDS::RequestedDeadlineMissedStatus & status);
 
     virtual
-    void on_sample_lost (
-      ::DDS::DataReader_ptr the_reader,
-      const ::DDS::SampleLostStatus & status);
+    void on_sample_lost (::DDS::DataReader_ptr the_reader,
+    const ::DDS::SampleLostStatus & status);
 
   private:
     ::Shapes::CCM_Receiver_comp_Context_var ciao_context_;
   };
-
-  
 
   class  Receiver_comp_exec_i
     : public virtual Receiver_comp_Exec,
@@ -114,8 +106,7 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     get_info_out_data_listener (void);
 
     virtual ::CCM_DDS::CCM_PortStatusListener_ptr
-    get_info_out_status (void);
-    //@}
+    get_info_out_status (void);//@}
 
     //@{
     /** Operations from Components::SessionComponent. */
